# chorus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: docs-deploy.yml  pypi.yml  pytest.yml
docs/: build-local.sh  build-test.sh  fix-icon-imports.sh  fix-static-paths.sh  next.config.mjs  package-lock.json  package.json  prepare-structure.sh  test-github-workflow.sh  update-workflow.sh  verify-imports.sh
docs/src/app/: layout.jsx  page.md
docs/src/app/docs/agent-communication/: page.md
docs/src/app/docs/centralized-collaboration/: page.md
docs/src/app/docs/collaboration-patterns/: page.md
docs/src/app/docs/decentralized-collaboration/: page.md
docs/src/app/docs/hello-world/: page.md
docs/src/app/docs/installation/: page.md
docs/src/app/docs/multi-team-orchestration/: page.md
docs/src/app/docs/question-answering-team/: page.md
docs/src/app/docs/team-formation/: page.md
docs/src/app/docs/tool-using-agents/: page.md
docs/src/app/docs/understanding-agents/: page.md
docs/src/app/docs/web-research-agents/: page.md
docs/src/app/docs/workspace-management/: page.md
docs/src/components/: Callout.jsx  DocsHeader.jsx  DocsLayout.jsx  Hero.jsx  Layout.jsx  Logo.jsx  Navigation.jsx  PrevNextLinks.jsx  ReferenceGrid.jsx  Search.jsx
docs/src/markdoc/: nodes.js  tags.js
examples/python/: agent_triggers.py  basic_single_agent.py  centralized_financial_risk_report_generation.py  collaboration_centralized_conversational_routing.py  communication_channels.py  custom_weekend_plan.py  decentralized_business_debate.py  decentralized_collaboration.py  decentralized_news_investigation.py  hello_world.py  multi_agent_workflow.py  start_chorus_in_a_thread.py  team_async_tool_calling.py  use_visual_debugger.py
examples/workspaces/centralized_auto_website_generator/: agents.py  ws.jsonnet
examples/workspaces/centralized_conversational_router/: ws.jsonnet
examples/workspaces/centralized_financial_risk_report_generation/: agents.py  ws.jsonnet
examples/workspaces/custom_agents_weekend_planner/: agents.py  ws.jsonnet
examples/workspaces/decentralized_team_minecraft_trading/: agents.py  ws.jsonnet
examples/workspaces/hello_world/: ws.jsonnet
examples/workspaces/single_agent/: ws.jsonnet
src/chorus/: agent_process.py  cli.py
src/chorus/agents/: __init__.py  async_tool_chat_agent.py  base.py  collaborative_agent.py  conversational_task_agent.py  langchain_agent.py  llamaindex_agent.py  meta.py  passive_agent.py  synchronized_coordinator_agent.py  task_coordinator_agent.py  tool_chat_agent.py
src/chorus/collaboration/: __init__.py  base.py  centralized.py  decentralized.py
src/chorus/communication/: message_service.py  message_view_selectors.py  zmq_protocol.py
src/chorus/config/: __init__.py  checks.py  from_params.py  globals.py  lazy.py  params.py  registrable.py
src/chorus/core/: __init__.py  runner.py  state.py
src/chorus/data/: __init__.py  agent_status.py  channel.py  checkpoint.py  collaboration_strategies.py  context.py  data_types.py  dialog.py  executable_tool.py  message_view.py  planner_output.py  prompt.py  resource.py  schema.py  state.py  team_info.py  tool.py  toolschema.py  trigger.py  utils.py
src/chorus/environment/: __init__.py  communication.py  global_context.py
src/chorus/executors/: __init__.py  base.py  tool_executor.py
src/chorus/helpers/: __init__.py  base.py  communication.py  smart_logic.py
src/chorus/lms/: __init__.py  base.py  bedrock_converse.py
src/chorus/planners/: __init__.py  base.py  simple_goal_planner.py  simple_planner.py
src/chorus/prompters/: __init__.py  base_prompter.py
src/chorus/prompters/adapters/: __init__.py  base.py  claude_structured_prompt_adapter.py
src/chorus/prompters/interact/: __init__.py  base.py  bedrock_converse_multi_agent_tool_chat.py  bedrock_converse_tool_chat.py  simple_chat_prompter.py
src/chorus/teams/: __init__.py  agent_team.py  base.py
src/chorus/teams/services/: __init__.py  base.py  team_scratchpad.py  team_storage.py  team_toolbox.py  team_voting.py
src/chorus/teams/toolbox/: __init__.py  team_scratchpad.py  team_storage.py  team_toolbox.py  team_voting.py
src/chorus/toolbox/: __init__.py  arxiv_tool.py  google_web_search.py  information_recommendation.py  remote_pdf_reader.py  serper_search.py  weather.py  web_retriever.py  web_retriever_v2.py  web_search.py
src/chorus/toolbox/examples/: __init__.py  sms.py  weather.py
src/chorus/toolbox/internal/: __init__.py  agent_communication.py  agent_control_tool.py  collaborative_agent_tools.py  task_agent_tools.py
src/chorus/toolbox/schemas/examples/: sms.json  weather.json
src/chorus/util/: __init__.py  agent_naming.py  agents_util.py  anthropic_tools.py  async_actions.py  communication.py  dialogset.py  interact.py  logging.py  prompt_util.py  status_manager.py  testing_util.py  visual_debugger.py  workspace_util.py
src/chorus/workspace/: __init__.py  workspace.py  workspace_util.py
src/chorus/workspace/stop_conditions/: __init__.py  base.py  message_based.py  no_activity.py
tests/chorus/: test_orchestrate_multiple_actions.py
tests/chorus/agents/: test_agent_triggers.py  test_arxiv_agent.py  test_async_agents.py  test_langchain_agent.py  test_llamaindex_agent.py  test_tool_chat_agents.py
tests/chorus/collaboration/: test_centralized_collaboration.py
tests/chorus/core/: test_channels.py  test_chorus_in_thread.py  test_orchestra_in_thread.py  test_orchestrate.py  test_save_checkpoint.py
tests/chorus/helpers/: test_smart_logic.py
tests/chorus/lms/: test_converse_inference.py
tests/chorus/tools/: test_arxiv.py
tests/chorus/utils/: test_visual_debugger.py
tests/chorus/verse/: test_sync_multi_agents.py
tests/chorus/workspace/: message_based_stopper.py
tests/chorus/workspace/stop_conditions/: test_no_activity.py
