[build-system]
requires = [
  "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "chorus"
version = "0.2.0"
description = "Chorus - A Framework for Collaborating and Orchestrating Teams of Autonomous Agents."

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jsonpath-ng>=1.5.3",
    "openapi-spec-validator>=0.7.1",
    "pydantic>=2.4.1",
    "jsonref>=1.1.0",
    "boto3>=1.34.14",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.1",
    "arxiv>=2.1.0",
    "jsonnet>=0.20.0",
    "duckduckgo_search>=5.3.0",
    "beautifulsoup4>=4.12.3",
    "tenacity>=8.2.2",
    "flask>=2.0.0",
    "jupyter_core",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "requests>=2.31.0",
]
langchain = [
  "langchain-core",
  "langchain",
  "langchain-community",
  "langchain-aws"
]
[tool.hatch.envs.default]
# This controls what version of Python you want to be the default
# when running any scripts or tools to do things like debug test failures
# or do general development.  It's lockfile is ./requirements.txt
python = "3.12"
dependencies = [
    "pytest",
    "mypy",
    "pytest-cov",
    "coverage",
    "black",
    "isort",
    "flake8",
    "pep8-naming",
    "PyYAML"
]

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "--color=yes",
]
testpaths = [ "tests" ]

[tool.coverage.run]
source_pkgs = ["chorus"]
branch = true
parallel = true
# fail_under = 99

[tool.coverage.paths]
"chorus" = ["src/chorus", "**/site-packages/chorus"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise AssertionError"
]
show_missing = true

[tool.coverage.html]
directory = "./coverage"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["chorus"]
profile = "black"
line_length = 100
force_single_line = true

[tool.hatch.build]
directory = "./build"

[tool.hatch.env]
requires = [ "hatch-pip-compile" ]

[tool.hatch.envs.default.scripts]
typing = [
  "mkdir -p .mypy_cache",
  "mypy --install-types --non-interactive src/chorus tests/chorus"
]
